--- a/communityApp/src/events.html
+++ b/communityApp/src/events.html
@@ -2,4 +2,5 @@
     <div repeat.for="event of events">
         <compose model.bind="event" view-model="event"></compose>
     </div>
+    <div><button click.trigger='createAndUseLazy()'>Use Lazy</button></div>
 </template>
