--- a/communityApp/src/shell.html
+++ b/communityApp/src/shell.html
@@ -21,8 +21,8 @@
                         <a data-toggle="collapse" data-target="#bs-example-navbar-collapse-1.in" href.bind="route.href">${route.title}</a>
                     </li>
 				</ul>
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
+			</div>
+		</div>
 	</nav>
 
     <div class="containter-fluid">
