--- a/communityApp/src/events/events.html
+++ b/communityApp/src/events/events.html
@@ -2,4 +2,5 @@
     <div repeat.for="event of events">
         <compose model.bind="event" view="events/event.html"></compose>
     </div>
+    <div><button type="button" click.trigger="gotoDiscussion()">Go to discussion</button></div>
 </template>
