look at canDeactivate

--- a/communityApp/index.html
+++ b/communityApp/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Community App</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.6.3/css/font-awesome.min.css">
 </head>
 
 <body aurelia-app="main">
