--- a/communityApp/src/events/event.html
+++ b/communityApp/src/events/event.html
@@ -1,5 +1,19 @@
 <template>
     <div class="bg-success rbox">
-        <a href.bind="event.detailUrl">${event.id} : ${event.title} @ ${event.dateTime}</a>
+        <table>
+            <tr>
+                <a href.bind="event.detailUrl">
+                    <h3 textContent.bind="event.title"></h3>
+                </a>
+            </tr>
+            <tr>
+                <td>
+                    <h5>${event.dateTime}</h5>
+                </td>
+            </tr>
+            <tr>
+                <td innerHtml.bind="event.description | sanitizeHTML"></td>
+            </tr>
+        </table>
     </div>
 </template>
