--- a/communityApp/src/shell.html
+++ b/communityApp/src/shell.html
@@ -2,7 +2,7 @@
     <require from="bootstrap/css/bootstrap.css"></require>
 
 	<nav class="navbar navbar-default">
-		<div class="container-fluid">
+		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -30,7 +30,7 @@
 		</div>
 	</nav>
 
-    <div class="containter-fluid">
+    <div class="containter">
         <div class="col-xs-10">
             <router-view name="mainContent"></router-view>
         </div>
