just playing with $odd and $even

--- a/communityApp/src/events/event.html
+++ b/communityApp/src/events/event.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="bg-success rbox">
+    <div class="bg-success rbox ${$even ? 'rboxEven' : 'rboxOdd' }">
         <table>
             <tr>
                 <a href.bind="event.detailUrl">
